# vaslib

./: .gitignore  CMakeLists.txt
cmake/: vaslibConfig.cmake.in
src/: CMakeLists.txt  aircraft_data.h  approach.cpp  config.cpp  config.h  configwidget.cpp  containerbase.cpp  declination_geomag.h  flight_mode_tracker.cpp  flightroute.cpp  fly_by_wire.cpp  fsaccess_msfs.cpp  fsaccess_msfs.h  fsuipc.h  geodata.cpp  geodata.h  holding.h  infodlgimpl.cpp  infodlgimpl.h  logger.cpp  logger.h  median.h  mouse_input_area.h  navcalc.cpp  navdata.cpp  navdata.h  procedure.cpp  projection_greatcircle.cpp  ptrlist.h  pushbutton.h  route.h  statistics.cpp  transport_layer_iface.h  vas_path.cpp  vas_path.h  vlassert.cpp  vlassert.h  vroute.cpp  vroute.h  weather.cpp  (+1 more)
src/FSUIPC/: IPCuser.c
src/FSUIPC64/: FSUIPC_User.h  IPCuser.c  IPCuser.h
src/charts/: chart.xml.defines.h  chartinfodlgimpl.cpp  chartmodel.cpp  chartwidget.cpp  ge_list.cpp  treebase_xml.cpp
src/messagebus/: eventqueue.cpp  eventqueue.h  fmcmessagebus.cpp  fmcmessagebus.h
